<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sukurti_profili"
            android:icon="@drawable/ic_round_add_circle_outline_24"
            android:title="Sukurti profilį" />
        <item
            android:id="@+id/nav_pagrindinis"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="Pagrindinis" />
        <item
            android:id="@+id/nav_zinutes"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="Žinutės" />
        <item
            android:id="@+id/nav_ziureti"
            android:icon="@drawable/ic_baseline_person_search_24"
            android:title="Žiūrėti korepetitorius" />
        <item
            android:id="@+id/nav_kategorija"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="Kategorijos" />
    </group>

    <item android:title="Mano mokymasis" >
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/nav_issaugotikop"
                android:icon="@drawable/ic_baseline_favorite_24"
                android:title="Įsiminti korepetitoriai" />

            <item
                android:id="@+id/nav_uzklausosMokiniai"
                android:icon="@drawable/ic_baseline_person_add_alt_1_24"
                android:title="Mano užklausos" />

            <item
                android:id="@+id/nav_uzklausosKorepetitoriai"
                android:icon="@drawable/ic_baseline_person_add_alt_1_24"
                android:title="Mokinių užklausos" />

            <item
                android:id="@+id/nav_manokor"
                android:icon="@drawable/ic_baseline_person_24"
                android:title="Mano korepetitoriai" />
            <item
                android:id="@+id/nav_manomok"
                android:icon="@drawable/ic_baseline_person_24"
                android:title="Mano mokiniai" />
            <item
                android:id="@+id/nav_pammedziagaKorepetitorius"
                android:icon="@drawable/ic_baseline_topic_24"
                android:title="Mano įkelta medžiaga" />
            <item
                android:id="@+id/nav_pammedziagaMokinys"
                android:icon="@drawable/ic_baseline_topic_24"
                android:title="Pamokų medžiaga" />
        </menu>
    </item>

    <item android:title="Profilis">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/nav_profilisKorepetitorius"
                android:icon="@drawable/ic_round_account_box_24"
                android:title="Žiūrėti profilį" />
            <item
                android:id="@+id/nav_profilisMokinys"
                android:icon="@drawable/ic_round_account_box_24"
                android:title="Žiūrėti profilį" />
            <item
                android:id="@+id/nav_pasalinti"
                android:icon="@drawable/ic_baseline_person_remove_24"
                android:title="Pašalinti profilį" />
            <item
                android:id="@+id/nav_atsijungti"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="Atsijungti" />
        </menu>
    </item>
</menu>