...
            android:id="@+id/GyvaiRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gyvai" />

        <RadioButton
            android:id="@+id/AbuduRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gyvai ir nuotoliniu" />

    </RadioGroup>

...
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

    </LinearLayout>

    <Button
        android:id="@+id/patvirtintiFiltra"
        android:background="@drawable/button_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Patvirtinti" />

</LinearLayout>
...
