<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filtras"
        android:title="Ieškoti"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_filter_alt_24"/>
</menu>